// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderMarkdown states > invalid-data: input, problem and fix 1`] = `
"<!-- coverage-insight -->

## ⚠️ Coverage report error

_PR #42_

### What went wrong

- **head** — corrupt JSON
  - fix: check the artifact path

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > monorepo: per-project verdict rows 1`] = `
"<!-- coverage-insight -->

## 📦 Monorepo coverage

_PR #42_

### Projects

| Project | Status | Lines | Δ |
| --- | --- | ---: | ---: |
| pkg-a | ✅ passed | 90.0% | +10.0 |
| pkg-b | ❌ gate failed | 90.0% | +10.0 |

<details>
<summary>pkg-a — 0 files</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |

</details>

<details>
<summary>pkg-b — 0 files</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > no-baseline: absolute numbers only 1`] = `
"<!-- coverage-insight -->

## ℹ️ Baseline recorded

_PR #42_

> [!NOTE]
> No baseline was found — absolute coverage only. Deltas will appear once the next baseline run records one.

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** | 9/10 |
| 🟢 | Branches | **90.0%** | 9/10 |
| 🟢 | Functions | **90.0%** | 9/10 |
| 🟢 | Lines | **90.0%** | 9/10 |

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% | 90.0% | 90.0% | 90.0% | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > no-change: single-line minimal comment 1`] = `
"<!-- coverage-insight -->
✅ Coverage unchanged"
`;

exports[`renderMarkdown states > passed: verdict first line after the D5 marker 1`] = `
"<!-- coverage-insight -->

## ✅ Coverage gate passed

_PR #42_

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |

### ✏️ Changed files (1 of 1)

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > regression: severity badges 1`] = `
"<!-- coverage-insight -->

## 🔻 Coverage regression

_PR #42_

### 🔻 Coverage regressions — 1 file _(sorted by impact)_

_Files where this PR reduced coverage. Ratchet policy treats these as violations even when the project threshold is still met._

- **\`src/a.ts\`** — 🔴 critical
  statements 80.0 → 20.0 (−60.0) · branches 80.0 → 20.0 (−60.0) · functions 80.0 → 20.0 (−60.0) · lines 80.0 → 20.0 (−60.0)

> [!IMPORTANT]
> 🔴 critical: drop > 5pp or below a path threshold · 🟡 warning: any decrease

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🔴 | Statements | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ 🔻) | 2/10 |
| 🔴 | Branches | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ 🔻) | 2/10 |
| 🔴 | Functions | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ 🔻) | 2/10 |
| 🔴 | Lines | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ 🔻) | 2/10 |

### ✏️ Changed files (1 of 1)

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

<details>
<summary>🔻 Show files with reduced coverage (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

</details>

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > tests-failed: failures first, coverage marked partial 1`] = `
"<!-- coverage-insight -->

## 🛑 Tests failed — report in failure mode

_PR #42_

| Failed | Passed | Total |
| ---: | ---: | ---: |
| **1** | 4 | 5 |

### Failed suites

<details open>
<summary><code>src/a.test.ts</code> — 1 failed test</summary>

- ❌ boom

</details>

> [!WARNING]
> Coverage shown below is partial — computed from the failed run. Gate evaluation deferred until tests pass.

<details>
<summary>Partial coverage summary (informational only)</summary>

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |

### ✏️ Changed files (1 of 1)

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > threshold-failed: compliance table and shortest path to green 1`] = `
"<!-- coverage-insight -->

## ❌ Coverage gate failed \`blocks merge\`

_PR #42_

### Threshold compliance

| Metric | Required | PR | Gap | Status |
| --- | ---: | ---: | ---: | --- |
| Lines | 90% | 90.0% | ±0.0 | ✅ pass |

### Shortest path to green — smallest set of files that closes the gap

| File | Uncovered | Impact |
| --- | --- | --- |
| \`src/a.ts\` | 1 uncovered line | closes the full 10.0pp lines gap |

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ 🔼) — required 90% | 9/10 |

### ✏️ Changed files (1 of 1)

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;
